add 藍皮 樣式 文字

--- a/src/components/WorldCupModule/components/Banner/Banner.module.scss
+++ b/src/components/WorldCupModule/components/Banner/Banner.module.scss
@@ -2,7 +2,8 @@
   width: 100%;
   position: relative;
   height: 0;
-  padding-top: calc( 100% * (205 / 375))
+  padding-top: calc( 100% * (205 / 375));
+  background-color: #4C9EEA;
 }
 
 .wrapper {
