--- a/src/components/WorldCupModule/containers/Group/List/List.module.scss
+++ b/src/components/WorldCupModule/containers/Group/List/List.module.scss
@@ -101,7 +101,7 @@
           &.active {
             color: #fff;
             box-shadow: none;
-            background-color: var(--primary-base);
+            background-color: #4C9EEA;
           }
         }
       }
