--- a/src/components/WorldCupModule/pages/Event/Vote/components/GroupBox/GroupBox.module.scss
+++ b/src/components/WorldCupModule/pages/Event/Vote/components/GroupBox/GroupBox.module.scss
@@ -40,7 +40,7 @@
       padding: 0 15px;
       font-size: 11px;
       height: 33px;
-      background-color: var(--primary-base);
+      background-color: #4C9EEA;
       color: #fff;
       border-radius: 15px;
       box-shadow: var(--worldcup-btn-shadow);
