--- a/src/components/PopularModule/CardList/Desktop/Content/Content.module.scss
+++ b/src/components/PopularModule/CardList/Desktop/Content/Content.module.scss
@@ -28,6 +28,10 @@
           max-width: 20px;
           max-height: 20px;
         }
+        > svg {
+          width: 20px;
+          height: 20px;
+        }
       }
       &:not(.tennis) {
         width: 30px;
